k3s/portfolio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: ghcr.io/lkh599810/lkh-portfolio:9d2fdf0f5b4cbea4547928fba3384f0dafec6c98
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - port: 80
      targetPort: 5001
